--- a/packages/shared/src/styles/index.css
+++ b/packages/shared/src/styles/index.css
@@ -1,4 +1,41 @@
 @import "./tailwind.css";
-@import "./fonts.css";
-@import "./typography.css";
+@import "./fonts/source-sans-pro/index.css";
+@import "./fonts/inconsolata/index.css";
+@import "./fonts/bxicons/index.css";
 @import "./animations.css";
+@import "./typography.css";
+@import "~@tsed/tailwind-formio/styles/index.css";
+
+.formio-modified:not(.has-error) {
+  label {
+    @apply text-green;
+  }
+
+  .form-control {
+    @apply border-green;
+
+    &:focus {
+      @apply outline-none border-green-300 ring ring-green-200 ring-opacity-50;
+      outline-offset: theme('outline.none[1]');
+      box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+      border-color: theme('colors.green.600');
+    }
+  }
+}
+
+.has-error {
+  label, .error {
+    @apply text-red;
+  }
+
+  .form-control {
+    @apply border-red;
+
+    &:focus {
+      @apply outline-none border-red-300 ring ring-red-200 ring-opacity-50;
+      outline-offset: theme('outline.none[1]');
+      box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+      border-color: theme('colors.red.600');
+    }
+  }
+}
